# InformationTechnologies

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
information_technologies/: asgi.py  mongo_utils.py  settings.py  urls.py  wsgi.py
lab1/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
lab1/migrations/: 0001_initial.py
lab4/: exceptions.py  middleware.py  serializers.py  urls.py  views.py
nginx/: Dockerfile  nginx.conf
non_rel_db/: apps.py  models.py  serializers.py  urls.py  views.py
non_rel_db/migrations/: 0001_initial.py  0002_student.py
